--- a/app-configuration.json
+++ b/app-configuration.json
@@ -1,8 +1,8 @@
 {
-    "startTimestamp" : "2000-11-01T12:00:00Z",
-    "endTimestamp" : "2000-02-01T12:00:00Z",
-    "years" : "ALL",
+    "startTimestamp" : "2000-04-01T12:00:00Z",
+    "endTimestamp" : "2000-07-01T12:00:00Z",
+    "years" : null,
     "filter" : true,
-    "season" : "winter", 
+    "season" : "spring", 
     "splitt" : false
 }
